test/valid/call.js
function f(x) { x = 0; return x; }
f(2);
