test/invalid/occurs2.js
var f = function (x) {
    return function (z) { return f(z); };
};
